[gd_scene load_steps=6 format=3 uid="uid://5fdqqjr84jud"]

[ext_resource type="Script" path="res://SS/rigid_body_projectile_bottle.gd" id="1_52k8b"]
[ext_resource type="Texture2D" uid="uid://en70cdrlfx33" path="res://Sprites/Objects/64x64.png" id="2_1fgjl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4kp25"]
radius = 13.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hwpnv"]
radius = 15.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jx3q0"]
size = Vector2(16, 16)

[node name="RigidBody_projectile_bottle" type="RigidBody2D"]
top_level = true
collision_layer = 0
collision_mask = 2
mass = 0.2
inertia = 1.0
script = ExtResource("1_52k8b")
impulse_force = Vector2(30, -10)

[node name="Obj2" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_1fgjl")
hframes = 16
vframes = 137
frame = 271

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4kp25")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="HitShape" type="CollisionShape2D" parent="HitBox"]
position = Vector2(2, 1.5)
shape = SubResource("CircleShape2D_hwpnv")
debug_color = Color(0.950402, 2.31028e-06, 0.568778, 0.42)

[node name="DrinkBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="DrinkShape" type="CollisionShape2D" parent="DrinkBox"]
position = Vector2(-8, -8)
shape = SubResource("RectangleShape2D_jx3q0")
debug_color = Color(0.283057, 0.630916, 0, 0.42)

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="area_entered" from="DrinkBox" to="." method="_on_drink_box_area_entered"]
